[package]
name = "ssr-algorithms"
description = "spaced repetition algorithms"
license = "MIT"
version = "0.8.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
fsrs = "1.3.5"
itertools = "0.13.0"
rand = "0.8.5"
s_text_input_f = "0.3"
serde = { version = "1.0", features = ["derive"] }
ssr-core = "0.38"
# ssr-core = { path = "../ssr-core/" }
